tests/paczka1/small_fuzzy/61053513.err
Error in line 6: v7IS8 S305 69,1
Error in line 8: A316 S764 122,4
